--- a/package.json
+++ b/package.json
@@ -9,10 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "expo": "~49.0.15",
+    "expo-blur": "~12.4.1",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-localization": "~14.3.0",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
+    "firebase": "^10.5.2",
+    "i18next": "^23.7.10",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-i18next": "^13.5.0",
+    "react-native": "0.72.6",
+    "react-native-blur": "^3.2.2",
+    "react-native-elements": "^3.4.3",
+    "react-native-maps": "1.7.1",
+    "react-native-pager-view": "6.2.0",
+    "react-native-radio-buttons-group": "^3.0.5",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
