--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -22,13 +23,12 @@
     "expo-localization": "~14.3.0",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.17",
+    "expo-updates": "~0.18.18",
     "firebase": "^10.5.2",
     "i18next": "^23.7.10",
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-native": "0.72.6",
-    "react-native-blur": "^3.2.2",
     "react-native-elements": "^3.4.3",
     "react-native-maps": "1.7.1",
     "react-native-pager-view": "6.2.0",
@@ -39,7 +39,9 @@
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
+    "babel-jest": "^29.7.0"
   },
   "private": true
 }
